# acapy-webhook-example

./: Dockerfile  README.md  openapi.json  pyproject.toml
scripts/: generate-models.sh  retrieve-openapi.sh
src/: __init__.py  models.py
